# hyperexplorer

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml
benches/: search_test.rs
src/: ctxmenus.rs  dialogs.rs  filesystem.rs  icons.rs  indexing.rs  lib.rs  main.rs  search.rs  ui.rs  utils.rs
