[package]
name = "hyperexplorer"
version = "0.0.1"
edition = "2024"

[dependencies]
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["all_loaders"] }
image = "0.25.8"
opener = "0.8.3"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }

[[bin]]
name = "hyperexplorer"
path = "src/main.rs"
