[package]
name = "hyperexplorer"
version = "0.0.1"
edition = "2024"

[dependencies]
clipboard-rs = "0.3.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_extras = { version = "0.32.3", features = ["all_loaders"] }
opener = "0.8.3"
sysinfo = "0.37.0"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "hyperexplorer"
path = "src/main.rs"


[[bench]]
name = "search_test"
harness = false